--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ doctorai-29af0-firebase-adminsdk-h9ltn-bdb950e5d4
 
 # dotenv environment variable files
 .env
+.env.test
 .env.development.local
 .env.test.local
 .env.production.local
