feat(citas, chat, ai): integrate medical report generation and custom prompts in AI services
- Add specific prompts in `CitasService` for each section of the medical
report and modify cells in the Excel copy.
- Integrate `createExcelCopy` and `modifyExcelFile` in `CitasService` to
manage files in Firebase Storage.
- Update `AI.ts` to allow prompt definition and adjustment in AI
instances, enhancing flexibility.
- Refine `ChatService` with a specific BASE_PROMPT for general
recommendations and symptom management.

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "ajv": "^8.17.1",
+    "exceljs": "^4.4.0",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.0.0"
   },
   "devDependencies": {
     "@angular-devkit/schematics-cli": "^18.2.2",
