--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "exceljs": "^4.4.0",
     "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
+    "pdfkit": "^0.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.0.0"
